--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/Spring
+spring.datasource.username=azar
+spring.datasource.password=azar
 
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
