--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Spring
-spring.datasource.username=azar
-spring.datasource.password=azar
+spring.application.name=socialEventManagement
+spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.generate-ddl=true
+spring.h2.console.enabled=true
