Added Swagger, Added Patch request to Event and Comment contollers, fixed pom.xml dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=socialEventManagement
 spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.h2.console.enabled=true
+springfox.documentation.swagger-ui.enabled=true
